Adding Sentry error reporting and adding better error formatting.

--- a/animetorrents-feed.json.sample
+++ b/animetorrents-feed.json.sample
@@ -10,5 +10,6 @@
   "doSpacesEndpoint": "https://ams3.digitaloceanspaces.com",
   "doSpacesRegion": "eu-west-1",
   "doSpacesBucket": "",
-  "doSpacesObjectName": "feed.xml"
+  "doSpacesObjectName": "feed.xml",
+  "sentryDns": ""
 }
